add starting frontend app

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "client-install": "npm install --prefix ../client",
+    "client": "npm run start --prefix ../client",
+    "dev": "concurrently \"npm run start:dev\" \"npm run client\""
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -29,6 +32,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "concurrently": "^7.6.0",
     "mongoose": "^6.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
